# pvr.vdr.vnsi.old

./: CMakeLists.txt  FindOpenGLES.cmake  FindOpenGLES2.cmake
debian/: changelog.in  control  prepare-vnsiserver.sh  rules  vdr-plugin-vnsiserver.install  xbmc-pvr-vdr-vnsi.install
pvr.vdr.vnsi/: addon.xml
src/: VNSIData.cpp  VNSIData.h  VNSIDemux.h  VNSISession.cpp  VNSISession.h  client.cpp  client.h  requestpacket.cpp  responsepacket.cpp  tools.cpp  tools.h  vnsicommand.h
